# mcp-toolbox

./: .gitattributes  .gitignore  LICENSE  README.md  config.template.yaml  config.templete.yaml  config.yaml  main.py  pyproject.toml  requirements.txt
examples/: java_tools.py  python_tools.py  shell_tools.py  sql_tools.py
examples/scripts/: backup_db.sh
examples/sql/: user_report.sql
mcp_toolbox/: __init__.py  __main__.py  config.py
mcp_toolbox/core/: config_db.py  config_store.py  database.py  decorators.py  errors.py  log_db.py  middleware.py  mysql_adapter.py  registry.py  schema.py  sqlite_adapter.py  token.py  token_db.py  types.py
mcp_toolbox/executors/: __init__.py  base.py  config_vars.py  java_executor.py  python_executor.py  shell_executor.py  sql_executor.py
mcp_toolbox/logging/: middleware.py  models.py  store.py
mcp_toolbox/server/: mcp_server.py
mcp_toolbox/web/: app.py  routes_api.py  routes_pages.py
mcp_toolbox/web/templates/: base.html  configs.html  dashboard.html  logs.html  tokens.html  tool_detail.html  tools.html
scripts/: shutdown.bat  shutdown.sh  start.bat  start.sh
tools/: README.md
